# magnumjs

./: .gitignore  CMakeLists.txt  package-lock.json  package.json
lib/: index.js  main.cpp
